[package]
authors = ["Oli Dacombe"]
description = "Tinkerbell tink grpc client wrapper"
edition = "2021"
name = "tinkc"
homepage = "https://github.com/olidacombe/tinkc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/olidacombe/tinkc"
version = "0.1.6"

[dependencies]
eyre = "0.6.6"
prost = "0.9.0"
prost-types = "0.9.0"
tonic = { version = "0.6.2", features = ["tls", "transport"] }
tokio = { version = "1.17.0", features = ["full"] }
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
derive_builder = "0.11.1"

[build-dependencies]
tonic-build = "0.6.2"
